--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,121 @@
 @font-face {
     font-family: 'IntroBold';
-    src: url(/assets/fonts/IntroBold.ttf) format(ttf);
+    src: url(../assets/fonts/IntroBold.ttf)
+        /*format(ttf)*/
+    ;
 }
 
 @font-face {
     font-family: 'IntroBook';
-    src: url(/assets/fonts/IntroBook.ttf) format(ttf);
+    src: url(../assets/fonts/IntroBook.ttf)
+        /*format(ttf)*/
+    ;
 }
 
 @font-face {
     font-family: 'IntroRegular';
-    src: url(/assets/fonts/IntroRegular.ttf) format(ttf);
+    src: url(../assets/fonts/IntroRegular.ttf)
+        /*format(ttf)*/
+    ;
 }
+
+
 
 /* HEADER */
 
 
 /* MAIN  */
 
+
+/* Block 3 AboutUs*/
+.block3-aboutUs {
+    background-color: #484283;
+    display: flex;
+    max-width: 1920px;
+
+}
+
+.block3cont1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    justify-content: space-around;
+
+}
+
+.all__paragraf {
+    font-family: 'IntroBook';
+    font-size: 16px;
+}
+
+.block3image2 {
+    width: 20%;
+    height: 20%;
+}
+
+.block3image1 {
+    width: 30%;
+    height: 30%;
+}
+
+.block3image3 {
+    align-self: flex-end;
+    padding: 20px;
+}
+
+.h2-header {
+    font-family: 'IntroBold';
+    font-size: 30px;
+}
+
+/* Block 4 PerfectPair*/
+.block4-perfectPair {
+    max-width: 1180px;
+    height: 660px;
+    background-color: rgb(247, 235, 236);
+}
+
+.h3-header {
+    font-family: 'introBook';
+    font-size: 24px;
+    font-weight: lighter;
+
+}
+
+.block4-p {
+    color: gray;
+}
+
+.block4-container-photo {
+    display: flex;
+    /*flex-direction: column;*/
+    width: 1000px;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+}
+
+.block4-container-photo__mini {
+    display: flex;
+    flex-direction: column;
+    max-width: 280px;
+    /*margin-right: 10px;*/
+    padding: 15px;
+}
+
+/*.block4__checkbox {
+    align-self: left;
+}*/
+.block4__buttonChange {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1000px;
+}
+
+.block4-button {
+    background-color: rgb(247, 235, 236);
+    font-family: 'Introbook';
+}
 
 /* FOOTER  */
