--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,7 @@
     color: gray;
 }
 
-.block4-container-photo {
+.block4-perfectPair__container1 {
     display: flex;
     /*flex-direction: column;*/
     width: 1000px;
@@ -99,7 +99,7 @@
 .block4-container-photo__mini {
     display: flex;
     flex-direction: column;
-    max-width: 280px;
+    max-width: 300px;
     /*margin-right: 10px;*/
     padding: 15px;
 }
