--- a/assets/style.css
+++ b/assets/style.css
@@ -1,121 +1,199 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 @font-face {
-    font-family: 'IntroBold';
-    src: url(../assets/fonts/IntroBold.ttf)
-        /*format(ttf)*/
-    ;
+  font-family: "IntroBold";
+  src: url(../assets/fonts/IntroBold.ttf) /*format(ttf)*/;
 }
 
 @font-face {
-    font-family: 'IntroBook';
-    src: url(../assets/fonts/IntroBook.ttf)
-        /*format(ttf)*/
-    ;
+  font-family: "IntroBook";
+  src: url(../assets/fonts/IntroBook.ttf) /*format(ttf)*/;
 }
 
 @font-face {
-    font-family: 'IntroRegular';
-    src: url(../assets/fonts/IntroRegular.ttf)
-        /*format(ttf)*/
-    ;
+  font-family: "IntroRegular";
+  src: url(../assets/fonts/IntroRegular.ttf) /*format(ttf)*/;
 }
 
-
+.container {
+  max-width: 1180px;
+  padding: 0 2rem;
+  margin: auto;
+}
 
 /* HEADER */
+.header {
+  background-color: #484283;
+}
+.header__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.5);
+}
+.header__top-logo img {
+  max-width: 100%;
+  margin: 1.25rem 0;
+}
 
+.header__menu ul {
+  display: flex;
+  list-style-type: none;
+}
+.header__menu a {
+  color: #ffffff;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: "introBook";
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  outline: none;
+  text-decoration: none;
+  padding-left: 1.25rem;
+}
+.header__text {
+  position: relative;
+  padding-bottom: 6.25rem;
+}
 
+.header__text-background {
+  width: 85%;
+  height: 60%;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.header__text-background p {
+  color: rgba(255, 255, 255, 0.12);
+  font-family: "IntroBold";
+  font-size: 12rem;
+}
+.header__h1 {
+  color: #ffffff;
+  font-family: "IntroRegular";
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 3.15rem;
+  max-width: 36.25rem;
+  padding: 6.25rem 0 1.25rem;
+}
+.header__subtitle {
+  max-width: 30rem;
+  color: #ffffff;
+  font-family: "introBook";
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  margin-bottom: 3.3rem;
+}
+.header__btn-buy-link {
+  text-decoration: none;
+  color: #ffffff;
+  font-family: "introBook";
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 1.38rem 2.94rem;
+  background-color: #f14f4f;
+  border-radius: 0.25rem;
+}
+/* .header__btn-buy {
+  margin-bottom: 6.25rem;
+} */
 /* MAIN  */
-
 
 /* Block 3 AboutUs*/
 .block3-aboutUs {
-    background-color: #484283;
-    display: flex;
-    max-width: 1920px;
-
+  background-color: #484283;
+  display: flex;
+  max-width: 1920px;
 }
 
 .block3cont1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    justify-content: space-around;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  justify-content: space-around;
 }
 
 .all__paragraf {
-    font-family: 'IntroBook';
-    font-size: 16px;
+  font-family: "IntroBook";
+  font-size: 16px;
 }
 
 .block3image2 {
-    width: 20%;
-    height: 20%;
+  width: 20%;
+  height: 20%;
 }
 
 .block3image1 {
-    width: 30%;
-    height: 30%;
+  width: 30%;
+  height: 30%;
 }
 
 .block3image3 {
-    align-self: flex-end;
-    padding: 20px;
+  align-self: flex-end;
+  padding: 20px;
 }
 
 .h2-header {
-    font-family: 'IntroBold';
-    font-size: 30px;
+  font-family: "IntroBold";
+  font-size: 30px;
 }
 
 /* Block 4 PerfectPair*/
 .block4-perfectPair {
-    max-width: 1180px;
-    height: 660px;
-    background-color: rgb(247, 235, 236);
+  max-width: 1180px;
+  height: 660px;
+  background-color: rgb(247, 235, 236);
 }
 
 .h3-header {
-    font-family: 'introBook';
-    font-size: 24px;
-    font-weight: lighter;
-
+  font-family: "introBook";
+  font-size: 24px;
+  font-weight: lighter;
 }
 
 .block4-p {
-    color: gray;
+  color: gray;
 }
 
 .block4-container-photo {
-    display: flex;
-    /*flex-direction: column;*/
-    width: 1000px;
-    flex-wrap: wrap;
-    justify-content: left;
-    align-items: center;
+  display: flex;
+  /*flex-direction: column;*/
+  width: 1000px;
+  flex-wrap: wrap;
+  justify-content: left;
+  align-items: center;
 }
 
 .block4-container-photo__mini {
-    display: flex;
-    flex-direction: column;
-    max-width: 280px;
-    /*margin-right: 10px;*/
-    padding: 15px;
+  display: flex;
+  flex-direction: column;
+  max-width: 280px;
+  /*margin-right: 10px;*/
+  padding: 15px;
 }
 
 /*.block4__checkbox {
     align-self: left;
 }*/
 .block4__buttonChange {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
 }
 
 .block4-button {
-    background-color: rgb(247, 235, 236);
-    font-family: 'Introbook';
+  background-color: rgb(247, 235, 236);
+  font-family: "Introbook";
 }
 
 /* FOOTER  */
