--- a/assets/style.css
+++ b/assets/style.css
@@ -60,19 +60,17 @@
 }
 
 .header__text-background {
-  width: 85%;
-  height: 60%;
-  margin: auto;
+  color: rgba(255, 255, 255, 0.12);
+  font-family: "IntroBold";
+  font-size: 12vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-}
-.header__text-background p {
-  color: rgba(255, 255, 255, 0.12);
-  font-family: "IntroBold";
-  font-size: 12rem;
 }
 .header__h1 {
   color: #ffffff;
@@ -103,11 +101,37 @@
   background-color: #f14f4f;
   border-radius: 0.25rem;
 }
-/* .header__btn-buy {
-  margin-bottom: 6.25rem;
-} */
 /* MAIN  */
-
+/* Block 2 Catalog*/
+.block2-catalog__products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 1.25rem;
+  max-width: 35rem;
+  margin: auto;
+}
+.block2-catalog__element {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.block2-catalog__img {
+  width: 100%;
+  max-width: 17.5rem;
+  height: 18.3rem;
+}
+.block2-catalog__name {
+  color: #444b58;
+  font-family: "IntroBook";
+  font-size: 1rem;
+  font-weight: 400;
+}
+.block2-catalog__price {
+  width: 5.25rem;
+  font-family: "IntroRegular";
+  font-size: 1.25rem;
+  font-weight: 400;
+}
 /* Block 3 AboutUs*/
 .block3-aboutUs {
   background-color: #484283;
