--- a/assets/normalize.css
+++ b/assets/normalize.css
@@ -347,17 +347,17 @@ textarea {
    * Add the correct display in Edge, IE 10+, and Firefox.
    */
 
-details {
+/* details {
     display: block;
-}
+} */
 
 /*
    * Add the correct display in all browsers.
    */
 
-summary {
+/* summary {
     display: list-item;
-}
+} */
 
 /* Misc
      ========================================================================== */
