--- a/assets/style.css
+++ b/assets/style.css
@@ -134,9 +134,9 @@
 }
 /* Block 3 AboutUs*/
 .block3-aboutUs {
-    background-color: #484283;
-    display: flex;
-    max-width: 1200px;
+  background-color: #484283;
+  display: flex;
+  max-width: 1200px;
 
 }
 
@@ -146,10 +146,11 @@
   align-items: center;
   color: white;
   justify-content: space-around;
+
 }
 
 .all__paragraf {
-  font-family: "IntroBook";
+  font-family: 'IntroBook';
   font-size: 16px;
 }
 
@@ -169,129 +170,114 @@
 }
 
 .h2-header {
-  font-family: "IntroBold";
+  font-family: 'IntroBold';
   font-size: 30px;
 }
 
 /* Block 4 PerfectPair*/
 .block4-perfectPair {
-    width: 1200px;
-    height: 800px;
-    margin: 30px auto;
-    /* padding: 30px;*/
-    display: flex;
-    /*overflow: hidden;*/
+  width: 1200px;
+  height: 800px;
+  margin: 30px auto;
+  /* padding: 30px;*/
+  display: flex;
+  /*overflow: hidden;*/
 
-    /*margin: 20px auto;*/
-    position: relative;
-    left: 0;
-    transition: all ease 1s;
+  /*margin: 20px auto;*/
+  position: relative;
+  left: 0;
+  transition: all ease 1s;
 }
 
 .h3-header {
-  font-family: "introBook";
+  font-family: 'introBook';
   font-size: 24px;
   font-weight: lighter;
+
 }
 
 .block4-p {
   color: gray;
 }
 
-.block4-container-photo {
+.block4-perfectPair__container1 {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(247, 235, 236);
+  width: 1000px;
+  height: 700px;
+  flex-wrap: wrap;
+  margin: 50px;
+  /*justify-content: left;
+  align-items: center;*/
+
+}
+
+.block4-perfectPair__container1-photo {
   display: flex;
   /*flex-direction: column;*/
-  width: 1000px;
   flex-wrap: wrap;
-  justify-content: left;
-  align-items: center;
+  width: 1000px;
+  height: 350px;
+  justify-content: center;
 }
 
 .block4-container-photo__mini {
   display: flex;
   flex-direction: column;
-  max-width: 280px;
+  width: 250px;
   /*margin-right: 10px;*/
   padding: 15px;
 }
 
-.block4-perfectPair__container1 {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(247, 235, 236);
-    width: 1000px;
-    height: 700px;
-    flex-wrap: wrap;
-    margin: 50px;
-    /*justify-content: left;
-    align-items: center;*/
-
-}
-
-.block4-perfectPair__container1-photo {
-    display: flex;
-    /*flex-direction: column;*/
-    flex-wrap: wrap;
-    width: 1000px;
-    height: 350px;
-    justify-content: center;
-}
-
-.block4-container-photo__mini {
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    /*margin-right: 10px;*/
-    padding: 15px;
-}
-
 .block4-perfectPair__container2 {
-    display: flex;
-    flex-direction: column;
-    width: 1000px;
-    height: 700px;
-    margin: 50px;
-    /*justify-content: left;*/
-    /*align-items: center;*/
-    background-color: rgb(247, 235, 236);
+  display: flex;
+  flex-direction: column;
+  width: 1000px;
+  height: 700px;
+  margin: 50px;
+  /*justify-content: left;*/
+  /*align-items: center;*/
+  background-color: rgb(247, 235, 236);
 }
 
 .block4-perfectPair__container2-size {
-    display: flex;
-    padding: 20px;
-    /* flex-direction: column;
-    height: 200px;*/
-    justify-content: space-around;
+  display: flex;
+  padding: 20px;
+  /* flex-direction: column;
+  height: 200px;*/
+  justify-content: space-around;
 }
 
 .block4-perfectPair__container2-image {
-    height: 275px;
+  height: 275px;
 }
 
 .block4-perfectPair__container3 {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(247, 235, 236);
-    width: 1000px;
-    height: 700px;
-    margin: 50px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(247, 235, 236);
+  width: 1000px;
+  height: 700px;
+  margin: 50px;
 }
 
 /*.block4__checkbox {
-    align-self: left;
+  align-self: left;
 }*/
 .block4__buttonChange {
-    display: flex;
-    /*max-width: 1000px;*/
-    /* margin: 30px auto;*/
-    padding: 30px;
-    justify-content: space-between;
+  display: flex;
+  /*max-width: 1000px;*/
+  /* margin: 30px auto;*/
+  padding: 30px;
+  justify-content: space-between;
 }
 
 .button {
-    background-color: rgb(247, 235, 236);
-    font-family: 'Introbook';
+  background-color: rgb(247, 235, 236);
+  font-family: 'Introbook';
 }
+
 
 /* block6-faq */
 .block6-faq {
