--- a/assets/style.css
+++ b/assets/style.css
@@ -341,6 +341,90 @@ details[open] > summary:after {
   max-width: 90%;
 }
 
+/* Block 7 */
+
+.block7-contacts {
+  background-color: #F3F6F6;
+  height: 32.2vw;
+}
+
+.block7-contacts__container {
+  margin: auto;
+  padding: 3.1vw 0 3.1vw 0;
+  width: 64.3%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.block7-contacts__contacts {
+  padding: 0 0 30px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.block7-contacts__contacts__mainOffice,
+.block7-contacts__contacts__salesOffice {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.block7-contacts h2{
+  color: #444B58;
+  text-align: left;
+  font-family: "IntroBold";
+  font-size: 2rem;
+  letter-spacing: -0.07rem;
+  width: 100%; 
+}
+
+.block7-contacts__contacts_officeName {
+  font-family: IntroBook;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.08em;
+  text-align: left;
+  color: #B2B5BB;
+}
+
+.block7-contacts__contacts_officeNumber {
+  font-family: IntroRegular;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 42px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #444B58;
+}
+
+.block7-contacts__contacts_officeAdress {
+  font-family: IntroBook;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #444B58;
+}
+
+.block7-contacts__icons {
+  display: flex;
+  gap: 10px;
+}
+
+.block7-contacts__icons_icon {
+  width: 2.3vw;
+}
+
+#map {
+  height: 25.9vw;
+  width: 35.4vw;
+}
+
+
 
 /* FOOTER  */
 footer{
