--- a/assets/style.css
+++ b/assets/style.css
@@ -342,6 +342,101 @@ details[open] > summary:after {
 }
 
 
+/* block8-questionForm */
+.block8-questionForm {
+  background-color: #FFFFFF;
+}
+.block8-questionForm__container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 64.3%;
+  min-width: min-content;
+  margin: auto;
+  margin-bottom: 58px;
+}
+.form-container {
+  background-color: #484283;
+  max-width: 31.8%;
+  border-radius: 3%;
+}
+.form-container h2 {
+  color: #FFFFFF;
+  font-family: 'IntroBold';
+  font-size: 1.8rem;
+  letter-spacing: 0.04rem;
+  text-align: center;
+  padding: 44.5px 0px 23px;
+}
+.form-container p {
+  max-width: 56%;
+  margin: auto;
+  text-align: center;
+  font-family: 'IntroBook';
+  color: #FFFFFF;
+  line-height: 1.4rem;
+}
+form {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 42px;
+padding-bottom: 47px;
+}
+.form-container input {
+  width: 90%;
+  margin: auto;
+  border: none;
+  border-radius: 3%;
+  padding: 18px 5.5%;
+  margin-bottom: 9.5px;
+  font-family: 'IntroBook';
+  font-size: 1.3rem;
+}
+.form-container input::placeholder {
+  font-family: 'IntroBook';
+}
+.form-container button {
+  width: 90%;
+  margin: auto;
+  border: none;
+  border-radius: 3%;
+  padding: 21px 0px;
+  font-family: 'IntroRegular';
+  font-size: 1.1rem;
+  color: #FFFFFF;
+  background-color: #f14f4f;
+}
+.instagram-container {
+  width: 56.8%;
+  height: 45.5vh;
+  margin-right: 70px;
+  text-align: center;
+}
+.instagram-container__fotos {
+  width: 100%;
+  max-height: 80%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 15px;
+  margin-top: 33px;
+}
+#insta1 {
+  grid-area: 1/1/2/2;
+}
+#insta2 {
+  grid-area: 2/1/3/2;
+}
+#insta3 {
+  grid-area: 1/2/3/4;
+}
+#insta4 {
+  grid-area: 1/4/2/5;
+}
+#insta5 {
+  grid-area: 2/4/3/5;
+}
+
+
 /* FOOTER  */
 footer{
   background-color: #444B58;
